# filter-10.2-backport

./: README.md  configure.ac
m4/: gengetopt.m4
src/: CDataSink.h  CFileDataSink.cpp  CFileDataSink.h  CFilter.h  CInfiniteMediator.cpp  CInfiniteMediator.h  CMediator.cpp  CMediator.h  CMediatorException.cpp  CMediatorException.h  COneShotException.cpp  COneShotException.h  COneShotHandler.cpp  COneShotHandler.h  COneShotMediator.cpp  COneShotMediator.h  CStdinDataSource.cpp  CStdinDataSource.h  Makefile.am  StringsToIntegers.cpp  StringsToIntegers.h
